# githubMeter

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
src/: App.tsx  api.ts  config.ts  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Dashboard.module.css  Dashboard.tsx  LoginScreen.module.css  LoginScreen.tsx  MeterCard.module.css  MeterCard.tsx  SetupModal.module.css  SetupModal.tsx  TitleBar.module.css  TitleBar.tsx  TransparencySlider.module.css  TransparencySlider.tsx
src/styles/: global.css
