[package]
name = "github-meter"
version = "1.0.0"
description = "Desktop widget to monitor GitHub Actions minutes, Packages bandwidth, LFS storage, and API rate limits"
authors = ["Bandonker"]
edition = "2021"
license-file = "../LICENSE"
repository = "https://github.com/Bandonker/githubMeter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "github_meter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["time", "macros", "rt-multi-thread", "process"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
open = "5"

